--- a/bb-frontend/src/components/order/order.module.css
+++ b/bb-frontend/src/components/order/order.module.css
@@ -111,6 +111,16 @@
 
     .cardImage {
         border-bottom-left-radius: 0;
+        min-width: 100%;
+        border-top-right-radius: 10px;
+        border-top-left-radius: 10px;
+    }
+
+    .cardInfoBlock {
+        width: 100%;
+    }
+    .cardButton {
+        width: 100%;
     }
 }
 
